# genzql.github.io

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  design.md  go.mod  grammar.js  package-lock.json  package.json  program.cjs  pyproject.toml  setup.py  tree-sitter.json  vite.config.ts
.github/workflows/: static.yml
asts/: function_call.ast  select_from.ast  select_from.json
bindings/c/: tree-sitter-base_sql.h  tree-sitter-base_sql.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_base_sql/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBaseSqlTests/: TreeSitterBaseSqlTests.swift
examples/: create_table.sql  delete.sql  function_call.sql  inner_join_left_outer_join.sql  insert_multiple_values.sql  insert_select.sql  insert_single_value.sql  query_clauses.sql  select_aggregate_clauses.sql  select_from.sql  update.sql
grammars/: baseSql.js
grammars/basesql/: grammar.js
grammars/postgresql/: grammar.js
renderers/basesql/: renderer.js
src/: App.tsx  ResultTable.tsx  SQLEditor.tsx  grammar.json  node-types.json  parser.c
src/converter/: createAst.js  createAst.ts  plainRenderer.js  renderer.ts
src/renderers/basesql/: renderer.js
src/renderers/zql/: renderer.d.ts  renderer.js
src/scripts/: plainRender.js  render.ts
