[package]
name = "tree-sitter-base-sql"
description = "Common functionality shared across SQL dialects."
version = "0.1.0"
authors = ["Vinesh Kannan and Tamjid Rahman"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "base-sql"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-base_sql"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
